fix(AvatarGroup): overflow issue (#173)

--- a/packages/frosted-ui/src/components/avatar-group.css
+++ b/packages/frosted-ui/src/components/avatar-group.css
@@ -9,6 +9,7 @@
   flex-shrink: 0;
 
   contain: size, layout;
+  overflow: hidden;
   background-color: var(--accent-a3);
 
   --avatar-group-inner-inset: 0.5;
